--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					</div>
 
 					<!-- Body -->
-					<div class="card-body">
+					<div id = "bang" class="card-body">
 						<div class="row mb-3">
 							<div class="col">
 								<div class="input-group">
@@ -288,7 +288,7 @@
 
 				<!-- Modal footer -->
 				<div class="modal-footer" id="modal-footer">
-					<button id="btnThemNV" type="button" class="btn btn-success" onclick="themnhanvien()">Thêm người dùng</button>
+					<button id="btnThemNV" type="button" class="btn btn-success" onclick="themnguoidung()">Thêm người dùng</button>
 					<button id="btnCapNhat" type="button" class="btn btn-success">Cập nhật</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
