--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<div class="row mb-3">
 							<div class="col">
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Loại nhân viên" id="searchName">
+									<input id= "timkiem" type="text" class="form-control" placeholder="Loại nhân viên" id="searchName">
 									<div class="input-group-prepend">
 										<span class="input-group-text" id="btnTimNV"><i class="fa fa-search"></i></span>
 									</div>
@@ -288,8 +288,8 @@
 
 				<!-- Modal footer -->
 				<div class="modal-footer" id="modal-footer">
-					<button id="btnThemNV" type="button" class="btn btn-success" onclick="themnguoidung()" >Thêm người dùng</button>
-					<button id="btnCapNhat" type="button" class="btn btn-success" onclick="upload()" style="display: none ;">Cập nhật</button>
+					<button id="btnThemNV" type="button" class="btn btn-success" onclick="themnguoidung()" style="display: inline-block;" >Thêm người dùng</button>
+					<button id="btnCapNhat" type="button" class="btn btn-success" style="display: none;">Cập nhật</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
 
