--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 									placeholder="Tài khoản">
 							</div>
 
-							<span class="sp-thongbao" id="tbTKNV"></span>
+							<span class="sp-thongbao text-danger" id="tbTKNV">fferfre</span>
 						</div>
 
 						<div class="form-group">
@@ -327,6 +327,7 @@
 
 <script src="./src/model/nhanvien.js"></script>
 <script src="./src/model/dsnv.js"></script>
+<script src="./src/model/validation.js"></script>
 <script src="./src/controller/mainnhanvien.js"></script>
 
 </body>
