--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text"><i class="fa fa-key"></i></span>
 								</div>
-								<input type="password" name="password" id="password" class="form-control input-sm"
+								<input type="text" name="password" id="password" class="form-control input-sm"
 									placeholder="Mật khẩu">
 							</div>
 							<span class="sp-thongbao" id="tbMatKhau"></span>
@@ -240,7 +240,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text"><i class="fa fa-calendar"></i></span>
 								</div>
-								<input type="text" name="ngaylam" id="datepicker" class="form-control"
+								<input type="date" name="ngaylam" id="datepicker" class="form-control"
 									placeholder="Ngày làm">
 							</div>
 
@@ -252,7 +252,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text"><i class="fa fa-money" aria-hidden="true"></i></span>
 								</div>
-								<input type="text" name="luongCB" id="luongCB" class="form-control input-sm"
+								<input type="number" name="luongCB" id="luongCB" class="form-control input-sm"
 									placeholder="Lương cơ bản">
 							</div>
 							<span class="sp-thongbao" id="tbLuongCB"></span>
