--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@
 					</div>
 
 					<!-- Body -->
-					<div id = "bang" class="card-body">
+					<div id="bang" class="card-body">
 						<div class="row mb-3">
 							<div class="col">
 								<div class="input-group">
-									<input id= "timkiem" type="text" class="form-control" placeholder="Loại nhân viên" id="searchName">
+									<input id="timkiem" type="text" class="form-control" placeholder="Loại nhân viên"
+										id="searchName">
 									<div class="input-group-prepend">
 										<span class="input-group-text" id="btnTimNV"><i class="fa fa-search"></i></span>
 									</div>
@@ -142,7 +143,7 @@
 									<th>Họ và tên</th>
 									<th>Email</th>
 									<th>Ngày làm</th>
-									<th>Chức vụ</th>									
+									<th>Chức vụ</th>
 									<th>Tổng lương</th>
 									<th>Xếp loại</th>
 									<th><em class="fa fa-cog"></em></th>
@@ -187,7 +188,7 @@
 				<!-- Modal body -->
 				<div class="modal-body">
 
-					<form role="form">
+					<form  role="form">
 
 						<div class="form-group">
 							<div class="input-group">
@@ -200,96 +201,102 @@
 
 							<span class="sp-thongbao text-danger" id="tbTKNV">fferfre</span>
 						</div>
-
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-address-book"></i></span>
-								</div>
-								<input type="name" name="name" id="name" class="form-control input-sm"
-									placeholder="Họ và tên">
-							</div>
-							<span class="sp-thongbao" id="tbTen"></span>
-						</div>
-
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-envelope"></i></span>
-								</div>
-								<input type="email" name="email" id="email" class="form-control input-sm"
-									placeholder="Email">
-							</div>
-
-							<span class="sp-thongbao" id="tbEmail"></span>
-						</div>
-
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-key"></i></span>
-								</div>
-								<input type="text" name="password" id="password" class="form-control input-sm"
-									placeholder="Mật khẩu">
-							</div>
-							<span class="sp-thongbao" id="tbMatKhau"></span>
-						</div>
-
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-calendar"></i></span>
-								</div>
-								<input type="date" name="ngaylam" id="datepicker" class="form-control"
-									placeholder="Ngày làm">
-							</div>
-
-							<span class="sp-thongbao" id="tbNgay"></span>
-						</div>
-						
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-money" aria-hidden="true"></i></span>
-								</div>
-								<input type="number" name="luongCB" id="luongCB" class="form-control input-sm"
-									placeholder="Lương cơ bản">
-							</div>
-							<span class="sp-thongbao" id="tbLuongCB"></span>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
-								</div>
-								<select class="form-control" id="chucvu">
-									<option>Chọn chức vụ</option>
-									<option>Sếp</option>
-									<option>Trưởng phòng</option>
-									<option>Nhân viên</option>
-								</select>
-							</div>
-
-							<span class="sp-thongbao" id="tbChucVu"></span>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
-								</div>
-								<input type="text" name="gioLam" id="gioLam" class="form-control input-sm"
-									placeholder="Giờ làm">
-							</div>
-							<span class="sp-thongbao" id="tbGiolam"></span>
-						</div>
-
 					</form>
+						<form id ="reset" >
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-address-book"></i></span>
+									</div>
+									<input type="name" name="name" id="name" class="form-control input-sm"
+										placeholder="Họ và tên">
+								</div>
+								<span class="sp-thongbao" id="tbTen"></span>
+							</div>
+
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-envelope"></i></span>
+									</div>
+									<input type="email" name="email" id="email" class="form-control input-sm"
+										placeholder="Email">
+								</div>
+
+								<span class="sp-thongbao" id="tbEmail"></span>
+							</div>
+
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-key"></i></span>
+									</div>
+									<input type="text" name="password" id="password" class="form-control input-sm"
+										placeholder="Mật khẩu">
+								</div>
+								<span class="sp-thongbao" id="tbMatKhau"></span>
+							</div>
+
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-calendar"></i></span>
+									</div>
+									<input type="date" name="ngaylam" id="datepicker" class="form-control"
+										placeholder="Ngày làm">
+								</div>
+
+								<span class="sp-thongbao" id="tbNgay"></span>
+							</div>
+
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-money"
+												aria-hidden="true"></i></span>
+									</div>
+									<input type="number" name="luongCB" id="luongCB" class="form-control input-sm"
+										placeholder="Lương cơ bản">
+								</div>
+								<span class="sp-thongbao" id="tbLuongCB"></span>
+							</div>
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
+									</div>
+									<select class="form-control" id="chucvu">
+										<option>Chọn chức vụ</option>
+										<option>Sếp</option>
+										<option>Trưởng phòng</option>
+										<option>Nhân viên</option>
+									</select>
+								</div>
+
+								<span class="sp-thongbao" id="tbChucVu"></span>
+							</div>
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fa fa-clock-o"
+												aria-hidden="true"></i></span>
+									</div>
+									<input type="text" name="gioLam" id="gioLam" class="form-control input-sm"
+										placeholder="Giờ làm">
+								</div>
+								<span class="sp-thongbao" id="tbGiolam"></span>
+							</div>
+						</form>
+					
 				</div>
 
 				<!-- Modal footer -->
 				<div class="modal-footer" id="modal-footer">
-					<button id="btnThemNV" type="button" class="btn btn-success" onclick="themnguoidung()" style="display: inline-block;" >Thêm người dùng</button>
-					<button id="btnCapNhat" type="button" class="btn btn-success" style="display: none;">Cập nhật</button>
+					<button id="btnThemNV" type="button" class="btn btn-success" onclick="themnguoidung()"
+						style="display: inline-block;">Thêm người dùng</button>
+					<button id="btnCapNhat" type="button" class="btn btn-success" style="display: none;">Cập
+						nhật</button>
+					<button id="resetform" type="button" class="btn btn-danger">Reset</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
 
@@ -325,10 +332,10 @@
 		});
 	</script>
 
-<script src="./src/model/nhanvien.js"></script>
-<script src="./src/model/dsnv.js"></script>
-<script src="./src/model/validation.js"></script>
-<script src="./src/controller/mainnhanvien.js"></script>
+	<script src="./src/model/nhanvien.js"></script>
+	<script src="./src/model/dsnv.js"></script>
+	<script src="./src/model/validation.js"></script>
+	<script src="./src/controller/mainnhanvien.js"></script>
 
 </body>
 
